# PureMic-Noise-Reducer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
driver/: PureaDriver.c  build.sh
driver/windows/: README.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: driver_installer.rs  eq.rs  mod.rs  pipeline.rs
src-tauri/src/commands/: audio.rs  mod.rs
src-tauri/src/rnnoise/: denoiser.rs  mod.rs
src/components/: DriverSetup.tsx  EQPanel.tsx  ErrorBoundary.tsx  GainSlider.tsx  MicrophoneSelector.tsx  NoiseToggle.tsx  OutputDeviceSelector.tsx  SettingsModal.tsx  VoicePoweredOrb.tsx
src/hooks/: useAudio.ts  useAudioLevel.ts  useMicrophones.ts  useOutputDevices.ts
src/lib/: tauri.ts  types.ts
src/pages/: Main.tsx
